@@ -8,6 +8,14 @@ Further:
 - Per's suggestion
 - man page fixes
 
+From David A Swierczek: automake should notice (eg) AC_CHECK_PROG and
+auto-generate Makefile substitution:
+	AC_CHECK_PROG(AR, ...)
+    =>  AR = @AR@ in Makefile.in
+Ditto AC_SUBST and other things that make sense.  Furthermore, other
+macros (eg AC_PROG_CC) should be handled via a similar mechanism; many
+special cases could be eliminated.
+
 consider putting all check-* targets onto @check?
 To support --help/--version checking?
 
