@@ -510,8 +510,6 @@ sub handle_options
 
     foreach (&variable_value_as_list ('AUTOMAKE_OPTIONS'))
     {
-	last if /^#/;
-
 	$options{$_} = 1;
 	if ($_ eq 'gnits' || $_ eq 'gnu' || $_ eq 'foreign')
 	{
@@ -3021,6 +3019,9 @@ sub variable_value_as_list
 	$content_seen{$var} = 1;
 	foreach (split (' ', $contents{$var}))
 	{
+	    # If a comment seen, just leave.
+	    last if /^#/;
+
 	    # Handle variable substitutions.
 	    if (/^\$\{(.*)\}$/ || /^\$\((.*)\)$/)
 	    {
