@@ -15,6 +15,6 @@ man.test info.test obsolete.test lex.test scripts.test subdir2.test \
 exsource.test canon4.test dup.test defun.test cxxlink.test cxxnoc.test \
 order.test libobj2.test interp.test alllib.test block.test libobj3.test \
 gnits.test interp2.test colneq.test implicit.test spell.test spell2.test \
-confsub.test primary.test primary2.test depend2.test spell3.test
+confsub.test primary.test primary2.test depend2.test spell3.test comment2.test
 
 EXTRA_DIST = defs $(TESTS)
