@@ -1,0 +1,15 @@
+#! /bin/sh
+
+# Make sure comment recognition works in PROGRAMS.  Report from Mark
+# Galassi.
+
+. $srcdir/defs || exit 1
+
+cat > Makefile.am << 'END'
+bin_PROGRAMS = sim_products receive_th receive_pos # image_proc
+END
+
+$AUTOMAKE || exit 1
+
+grep '^image_proc' Makefile.in && exit 1
+exit 0
