@@ -1,3 +1,7 @@
+Mon Sep 30 08:34:07 1996  Tom Tromey  <tromey@cygnus.com>
+
+	* comment2.test: New file.
+
 Mon Sep 23 00:23:34 1996  Tom Tromey  <tromey@creche.cygnus.com>
 
 	* spell3.test: New file.
