@@ -1,3 +1,9 @@
+Mon Sep 30 08:31:51 1996  Tom Tromey  <tromey@cygnus.com>
+
+	* automake.in (variable_value_as_list): Just return if comment
+	seen.  Report from Mark Galassi.
+	(handle_options): Don't bother with explicit comment checking.
+
 Tue Sep 24 09:15:46 1996  Tom Tromey  <tromey@creche.cygnus.com>
 
 	* automake.in (read_am_file): Cleaned up dejagnu variables.
